overflow fix and dark mode switch position fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,10 @@ html {
     width: 100%;
 }
 
+header{
+    /* margin-top: 10px; */
+}
+
 .header {
     font-size: large;
     font-weight: 1000;
@@ -58,6 +62,9 @@ body {
     margin: 0;
     padding: 0;
     min-height: 100%;
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
     box-sizing: border-box;
     display: flex;
     font-family: 'Montserrat', sans-serif;
@@ -84,7 +91,7 @@ header {
     letter-spacing: -1px;
     background-color: #0093E9;
     background-image: radial-gradient(circle at top center, rgba(17, 201, 137, 0.15) 0%, rgba(17, 201, 137, 0.15) 6%, transparent 6%, transparent 54%, transparent 54%, transparent 93%, rgba(48, 184, 210, 0.15) 93%, rgba(48, 184, 210, 0.15) 100%), radial-gradient(circle at top right, rgba(17, 201, 137, 0.15) 0%, rgba(17, 201, 137, 0.15) 2%, transparent 2%, transparent 19%, transparent 19%, transparent 36%, rgba(48, 184, 210, 0.15) 36%, rgba(48, 184, 210, 0.15) 100%), radial-gradient(circle at top right, rgba(17, 201, 137, 0.15) 0%, rgba(17, 201, 137, 0.15) 1%, transparent 1%, transparent 2%, transparent 2%, transparent 11%, rgba(48, 184, 210, 0.15) 11%, rgba(48, 184, 210, 0.15) 100%), radial-gradient(circle at center center, rgba(17, 201, 137, 0.15) 0%, rgba(17, 201, 137, 0.15) 13%, transparent 13%, transparent 59%, transparent 59%, transparent 67%, rgba(48, 184, 210, 0.15) 67%, rgba(48, 184, 210, 0.15) 100%), linear-gradient(90deg, hsl(38, 64%, 92%), hsl(38, 64%, 92%));
-    background-size: 111px 111px;
+    background-size: 80px 100px;
     /* opacity: 70%; */
     color: #111;
     border-radius: 10px;
@@ -965,6 +972,7 @@ label {
     text-indent: -9999px;
     width: 59px;
     height: 26px;
+    margin: 5px;
     background: grey;
     display: block;
     border-radius: 100px;
